--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "cSpell.words": ["Raycast"]
+    "cSpell.words": ["Lerp", "Raycast"]
 }
