--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,7 @@ root=true
 
 [*.cs]
 dotnet_diagnostic.IDE0044.severity = none
+dotnet_diagnostic.IDE0032.severity = none
 
 # Code files
 [*.{cs,csx,vb,vbx}]
